<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.MovieDetailsActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_primary"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_title_text"
                    style="@style/searchText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="16dp"
                    android:textSize="24sp"
                    tools:text="Jurassic Park" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/director_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    app:cardBackgroundColor="@color/black_info_page"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="1dp">

                    <TextView
                        android:id="@+id/director_name"
                        style="@style/regularText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="2dp"
                        android:textSize="16sp"
                        tools:text="Steven Spielberg" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/movie_description"
                    style="@style/regularText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="16dp"
                    android:textSize="16sp"
                    tools:text="A pragmatic paleontologist visiting an almost complete theme park is tasked with protecting a couple of kids after a power failure causes the park's cloned dinosaurs to run loose." />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/genre_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="16dp"
                    android:scrollbars="none" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="32dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/reviews_card"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="50"
                        app:cardBackgroundColor="@color/black_info_page"
                        app:cardCornerRadius="4dp"
                        app:cardElevation="1dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="8dp"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/rating_number"
                                    style="@style/rating_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="6dp"
                                    tools:text="4.8" />

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ratings_icon" />
                            </LinearLayout>

                            <TextView
                                android:id="@+id/reviews_text"
                                style="@style/regularText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginBottom="8dp"
                                android:text="@string/see_all_reviews_text"
                                android:textColor="@color/white" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/favorite_card"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="50"
                        app:cardBackgroundColor="@color/black_info_page"
                        app:cardCornerRadius="4dp"
                        app:cardElevation="1dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/favorite_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="8dp"
                                android:src="@drawable/favorite_not_icon" />

                            <TextView
                                android:id="@+id/favorite_text"
                                style="@style/favorite_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginBottom="8dp"
                                android:textColor="@color/gray_text"
                                tools:text="Add to Favorites" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <TextView
                    android:id="@+id/cast_title"
                    style="@style/searchText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/cast_title"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cast_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:scrollbars="none" />

                <TextView
                    android:id="@+id/similar_movies_title"
                    style="@style/searchText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/similar_movies_title"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/similar_movies_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:scrollbars="horizontal" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black_primary"
            android:fitsSystemWindows="true"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/black_primary"
                app:expandedTitleGravity="bottom"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:scrimAnimationDuration="300">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="382dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7">

                    <ImageView
                        android:id="@+id/movie_poster_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/placeholder_movie_details" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/movie_poster_gradient" />
                </RelativeLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/main_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center_vertical"
                    app:layout_collapseMode="pin">

                    <ImageView
                        android:id="@+id/close_button"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/back_arrow" />

                    <TextView
                        android:id="@+id/movie_title_toolbar"
                        style="@style/searchText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:alpha="0"
                        android:maxLines="1"
                        android:textSize="24sp"
                        app:autoSizeStepGranularity="1sp"
                        app:autoSizeTextType="uniform"
                        tools:text="Jurassic Park" />

                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <include
            android:id="@+id/loading_layout"
            layout="@layout/progress_bar_layout"
            android:visibility="gone" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>
</FrameLayout>